# zforge

./: .gitignore  RATIONALE_LOGGING_IMPLEMENTATION.md  README.md  agents.md  inspect_ink_json.py  prompts.txt  pubspec.yaml  pyproject.toml  pyrightconfig.json  requirements.txt  roadmap.md
.github/: COPILOT_INSTRUCTIONS.md
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/zforge/zforge/: MainActivity.kt
assets/: ink-full.js
docs/: Application Configuration.md  Ask About World.md  Data and File Specifications.md  ER Diagram.md  Experience Generation.md  File Storage.md  IF Engine Abstraction Layer.md  Ink Engine Connector.md  LLM Abstraction Layer.md  LLM Orchestration.md  Libraries.md  Local LLM Execution.md  Managers and Processes.md  Managers, Processes, and MCP Server.md  Parsing Documents to Z-Bundles.md  Player Preferences.md  Processes.md  RAG and GRAG Implementation.md  User Experience.md  World Generation.md  Z-World.md  ZWorld.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  app_state.dart  main.dart
lib/models/: zforge_config.dart  zforge_secure_config.dart  zworld.dart
lib/processes/: create_world_process.dart  experience_generation_process.dart
lib/services/: config_service.dart  secure_config_service.dart
lib/services/if_engine/: if_engine_connector.dart  ink_engine_connector.dart
lib/services/llm/: llm_connector.dart  openai_connector.dart
lib/services/managers/: experience_manager.dart  glulx_manager.dart  zworld_manager.dart
lib/services/mcp/: zforge_mcp_server.dart
lib/ui/: app_router.dart
lib/ui/screens/: create_world_screen.dart  gameplay_screen.dart  generate_experience_screen.dart  home_screen.dart  llm_config_screen.dart  preferences_screen.dart
lib/ui/widgets/: world_list_tile.dart
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
src/zforge/: __main__.py  app.py  app_state.py
src/zforge/graphs/: ask_about_world_graph.py  document_parsing_graph.py  experience_generation_graph.py  graph_utils.py  state.py  world_creation_graph.py
src/zforge/managers/: experience_manager.py  zforge_manager.py  zworld_manager.py
src/zforge/models/: model_catalogue.py  process_config.py  results.py  zforge_config.py  zforge_secure_config.py  zworld.py
src/zforge/services/: config_service.py  model_download_service.py  secure_config_service.py
src/zforge/services/embedding/: __init__.py  embedding_connector.py  llama_cpp_embedding_connector.py
src/zforge/services/if_engine/: if_engine_connector.py  ink_engine_connector.py
src/zforge/services/llm/: anthropic_connector.py  connector_registry.py  google_connector.py  groq_connector.py  llama_cpp_connector.py  llm_connector.py  openai_connector.py
src/zforge/services/mcp/: zforge_mcp_server.py
src/zforge/tools/: experience_tools.py  world_tools.py
src/zforge/ui/screens/: create_world_screen.py  gameplay_screen.py  generate_experience_screen.py  home_screen.py  llm_config_screen.py  preferences_screen.py  world_details_screen.py
test/: widget_test.dart
tests/: test_connector_registry.py  test_world_creation_graph_connectors.py  test_zforge_config.py
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
